# evemu

./: .bzrignore  .gitignore  COPYING  INSTALL  Makefile.am  README  README.md  configure.ac  evemu.pc.in  utouch-evemu.pc.in
data/: 3m.event  3m.prop  bcm5974.event  bcm5974.prop  lp-884848.prop  ntrig-dell-xt2.event  ntrig-dell-xt2.prop  ntrig-lenovo-T410s.prop  synaptics.prop  wetab.event  wetab.prop
include/: evemu.h
python/: Makefile  Makefile.am  Makefile.original  TODO  evemu-test-runner.in  evemu.python-abi.xslt
python/evemu/: Makefile.am  __init__.py  base.py  const.py  data.py  device.py  exception.py  make-event-names.py  script.py  testing.py  util.py  wrapper.py
python/evemu/testing/: base.py  mocker.py  result.py  runner.py  testcase.py
python/evemu/tests/: test_base.py  test_device.py  test_evemu.py  test_script.py  test_util.py  test_wrapper.py
python/evemu/tests/data/ntrig-xt2/: ntrig-xt2-1-tap.event  ntrig-xt2-2-tap.event  ntrig-xt2-3-tap.event  ntrig-xt2.device
src/: Makefile.am  convert-old-dumps-to-1.1.py  evemu-impl.h  evemu.c  evemu.c-header.xslt  evemu.c-libver.xslt  evemu.h  evemu.xml  event-names.h  libevemu.ver  libutouch-evemu.ver  make-event-names.py  version.h
test/: Makefile.am  test-c-compile.c  test-cxx-compile.cpp  test-evemu-create.c
tools/: Makefile.am  evemu-describe.c  evemu-describe.txt  evemu-device.c  evemu-device.txt  evemu-echo.c  evemu-event.c  evemu-play.c  evemu-record.c  find_event_devices.c  find_event_devices.h
